# drf-lms

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
fixtures/: data.json
materials/: admin.py  apps.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_course_description_alter_course_preview_and_more.py  0003_alter_lesson_preview.py  0004_alter_course_title.py  0005_course_creator_lesson_creator.py  0006_subscription.py  0007_alter_course_options_alter_lesson_options.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_lesson_alter_payment_value.py  0004_payment_link_payment_session_id.py  0005_alter_payment_method.py
